engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_before_reset_refresh.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  Account usage and resets.


› 1. View analytics  Usage history
  2. Redeem reset    Check availability

  enter open · esc back
