engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_narrow.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 40)"
---
  Usage
  Account usage and resets.


› 1. View analytics
  2. Redeem reset

  enter open · esc back
